--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
     <title>WW2100 Interactive Map</title>           
 
-    <!-- jquery and bootstrap css for ui stuff -->
+    <!-- jquery and bootstrap css for GUI stuff -->
 	<link rel="stylesheet" href="lib/jquery-ui-1.11.4/jquery-ui.min.css">
 	<link rel="stylesheet" href="lib/bootstrap-3.3.6-dist/css/bootstrap.css">
 	
