--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     <!-- d3 for SVG manipulation, chart creation, and topojson, 
     	d3-queue for asynchronous json imports-->
     <script src="lib/d3/d3.js"></script>
-    <script src="https://d3js.org/d3-queue.v2.min.js"></script>
-    <script src="http://d3js.org/topojson.v1.min.js"></script>
+    <script src="lib/d3/d3-queue.v2.min.js"></script>
+    <script src="lib/d3/topojson.v1.min.js"></script>
 
 	<!-- jQuery, jQueryUI, and bootstrap imports -->
-	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+	<script src="lib/jquery-1.10.2.js"></script>
+    <!-- <script src="lib/jquery-ui.min.js"></script> -->
+    <script src="lib/jquery-ui-1.11.4/jquery-ui.min.js"></script>
     <script src="lib/bootstrap-3.3.6-dist/js/bootstrap.js"></script>
     
     <!-- Custom styling -->
