SWE legend test, added some readme files

--- a/index.html
+++ b/index.html
@@ -99,7 +99,15 @@
 			</button>
 		</div>
 		
-		<!-- Scenario buttons -->
+		<!-- Scenario buttons 
+		To change which scenario buttons appear with each data layer, add the 
+		abbreviated name of the data layer to the class list of the desired 
+		button. Use these abbreviations for each data layer:
+			lulc
+			landValue 
+			maxSWE
+			et
+		-->
 		<div class="scenarioButtonsContainer UIElementContainer">
 			<div data-toggle="buttons">
 				<label 
